factor away group_vars/tor.yaml

--- a/playbooks/roles/info_tor/defaults/main.yaml
+++ b/playbooks/roles/info_tor/defaults/main.yaml
@@ -3,7 +3,10 @@ log_lines: 10
 
 tor_bridge_distribution: ""
 
-# defined here to allow --check
 _fingerprint: ""
 _fingerprint_ed25519: ""
 _fingerprint_hashed: ""
+
+log_err: /var/log/tor/err.log
+log_notice: /var/log/tor/notice.log
+log_warn: /var/log/tor/warn.log
