--- a/ansible.cfg
+++ b/ansible.cfg
@@ -29,3 +29,4 @@ deprecation_warnings = True
 
 [ssh_connection]
 ssh_args = -4 -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=120s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
+retries = 2
