--- a/playbooks/roles/setup_kernel/tasks/kernel-build.yaml
+++ b/playbooks/roles/setup_kernel/tasks/kernel-build.yaml
@@ -1,13 +1,11 @@
 ---
-- name: Stop unattended upgrade (kernel build)
-  when: kernel_git_build_wait | bool
-  ansible.builtin.systemd_service:
-    name: "{{ item }}"
-    state: stopped
-  loop:
-    - apt-daily.timer
-    - apt-daily-upgrade.timer
-    - unattended-upgrades
+- name: Work on "{{ _repo_dir }}"
+  vars:
+    _git_repo_url: "{{ kernel_git_repo_url }}"
+    _git_version: "{{ kernel_git_version }}"
+    _git_patches: "{{ kernel_git_patches }}"
+    _repo_dir: /root/linux
+  ansible.builtin.include_tasks: "{{ role_path }}/../../../playbooks/roles/lib/_git.yaml"
 
 - name: Configure kernel
   changed_when: _kernel_configured.rc == 123
@@ -49,32 +47,50 @@
     gather_subset:
       - hardware
 
-- name: Build kernel
+- name: Build
   when: _git_repo_changed or _kernel_configured.changed or _kernel_build_script.changed or not _latest_is_running
-  changed_when: true
-  async: "{{ kernel_git_build_wait_retries * kernel_git_build_wait_delay }}"
-  poll: 0
   vars:
     _latest_is_running: "{{ ansible_facts.kernel is search(_git_head.before[:12]) }}"
-  ansible.builtin.shell: # noqa: command-instead-of-shell
-    cmd: >-
-      {{ (kernel_git_build_wait | bool) | ternary('/root/build-kernel.sh', 'nohup /root/build-kernel.sh reboot &') }}
-  register: _kernel_build
-
-- name: Kernel build
-  when: _kernel_build.changed
   block:
-    - name: Kernel build finished
-      when: kernel_git_build_wait | bool
-      retries: "{{ kernel_git_build_wait_retries }}"
-      delay: "{{ kernel_git_build_wait_delay }}"
-      until: _job_result.finished
-      ansible.builtin.async_status:
-        jid: "{{ _kernel_build.ansible_job_id }}"
-      register: _job_result
-      notify: Reboot system
+    - name: Stop unattended upgrade (kernel build)
+      ansible.builtin.systemd_service:
+        name: "{{ item }}"
+        state: stopped
+      loop:
+        - apt-daily.timer
+        - apt-daily-upgrade.timer
+        - unattended-upgrades
 
-    - name: Cleanup kernel build job
-      ansible.builtin.async_status:
-        jid: "{{ _kernel_build.ansible_job_id }}"
-        mode: cleanup
+    - name: Build kernel
+      changed_when: true
+      async: "{{ kernel_git_build_wait_retries * kernel_git_build_wait_delay }}"
+      poll: 0
+      ansible.builtin.shell: # noqa: command-instead-of-shell
+        cmd: >-
+          {{ (kernel_git_build_wait | bool) | ternary('/root/build-kernel.sh', 'nohup /root/build-kernel.sh reboot &') }}
+
+    - name: Kernel build job
+      block:
+        - name: Poll kernel build job
+          when: kernel_git_build_wait | bool
+          retries: "{{ kernel_git_build_wait_retries }}"
+          delay: "{{ kernel_git_build_wait_delay }}"
+          until: _job_result.finished
+          ansible.builtin.async_status:
+            jid: "{{ _kernel_build.ansible_job_id }}"
+          register: _job_result
+          notify: Reboot system
+
+        - name: Cleanup kernel build job
+          ansible.builtin.async_status:
+            jid: "{{ _kernel_build.ansible_job_id }}"
+            mode: cleanup
+
+    - name: Restart unattended upgrade (kernel build)
+      ansible.builtin.systemd_service:
+        name: "{{ item }}"
+        state: started
+      loop:
+        - apt-daily.timer
+        - apt-daily-upgrade.timer
+        - unattended-upgrades
