--- a/playbooks/roles/setup_common/tasks/firewall-tor.yaml
+++ b/playbooks/roles/setup_common/tasks/firewall-tor.yaml
@@ -132,6 +132,6 @@
     - name: Update egress firewall
       changed_when: true
       when: _egress_script.changed or _egress_cron.changed
-      ansible.builtin.shell: # noqa: command-instead-of-shell
+      ansible.builtin.shell:
         cmd: |-
           {{ tor_egress_slew }} /root/ipv4-rules-egress.sh start
