--- a/playbooks/roles/delete/tasks/delete.yaml
+++ b/playbooks/roles/delete/tasks/delete.yaml
@@ -3,6 +3,14 @@
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
   changed_when: true
-  ansible.builtin.command:
+  ansible.builtin.shell:
     cmd: >-
       hcloud --quiet --poll-interval 10s server delete {{ inventory_hostname }}
+
+- name: Delete ssh key
+  delegate_to: localhost
+  throttle: 1
+  changed_when: true
+  ansible.builtin.command:
+    cmd: >-
+      ssh-keygen -R {{ inventory_hostname }}
