allow hcloud being in hOME/bin

--- a/playbooks/roles/poweron/tasks/poweron.yaml
+++ b/playbooks/roles/poweron/tasks/poweron.yaml
@@ -25,7 +25,9 @@
           delegate_to: localhost
           throttle: "{{ concurrent_local_jobs }}"
           changed_when: true
-          ansible.builtin.shell:
+          environment:
+            PATH: "{{ lookup('env', 'PATH') }}:{{ lookup('env', 'HOME') }}/bin"
+          ansible.builtin.command:
             cmd: hcloud --quiet --poll-interval 10s server poweron {{ inventory_hostname }}
 
         - name: Additional wait after Poweron
