--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -182,3 +182,6 @@
       tags:
         - never
         - reboot
+
+    - name: Flush handlers (common)
+      ansible.builtin.meta: flush_handlers
