--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -77,4 +77,4 @@
     - name: Enable Tor
       ansible.builtin.systemd_service:
         name: tor
-      notify: Restart Tor
+        state: started
