wait up to 75 min for kernel buid

--- a/playbooks/roles/setup_kernel/defaults/main.yaml
+++ b/playbooks/roles/setup_kernel/defaults/main.yaml
@@ -1,7 +1,7 @@
 ---
 kernel_git_build_wait: true
-kernel_git_build_wait_retries: 60 # count
-kernel_git_build_wait_delay: 60 # seconds in between
+kernel_git_build_wait_retries: 75 # count
+kernel_git_build_wait_delay: 60 # seconds
 kernel_git_repo_url: ""
 kernel_git_version: ""
 kernel_git_patches: []
