--- a/playbooks/test-setup.yaml
+++ b/playbooks/test-setup.yaml
@@ -15,9 +15,10 @@
   roles:
     - role: setup_tor
 
-- name: Test all
+- name: Test kernel + autoupdate
   hosts: all
   roles:
+    - role: setup_kernel
     - role: setup_autoupdate
     - role: info_healthy
     - role: delete
