--- a/site-test-setup.yaml
+++ b/site-test-setup.yaml
@@ -2,4 +2,4 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 ---
-- ansible.builtin.import_playbook: playbooks/test-kernel.yaml
+- ansible.builtin.import_playbook: playbooks/test-setup.yaml
