--- a/ansible.cfg
+++ b/ansible.cfg
@@ -25,7 +25,7 @@ display_skipped_hosts = false
 no_target_syslog = true
 
 # https://github.com/ansible-collections/ansible.posix/issues/686:
-deprecation_warnings = True
+deprecation_warnings = False
 
 [ssh_connection]
 ssh_args = -4 -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=120s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
