Tor. make with -Os and debug info

--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -40,7 +40,7 @@
         --disable-zstd \
         >>make.log
       make clean >>make.log
-      make -j {{ _j }} >>make.log
+      make -j {{ _j }} -O2 -g -ggdb >>make.log
     chdir: /root/tor
 
 - name: Create directories
