--- a/playbooks/roles/delete/tasks/delete.yaml
+++ b/playbooks/roles/delete/tasks/delete.yaml
@@ -2,7 +2,7 @@
 - name: Flush handlers (before delete)
   ansible.builtin.meta: flush_handlers
 
-- name: Delete instance
+- name: Instance
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
   changed_when: _hcloud.rc == 0
@@ -13,7 +13,7 @@
       hcloud --quiet --poll-interval 10s server delete {{ inventory_hostname }}
   register: _hcloud
 
-- name: Delete ssh key
+- name: SSH key
   delegate_to: localhost
   throttle: 1
   changed_when: _result.stdout is not search('not found in')
