--- a/playbooks/roles/snapshot/tasks/snapshot.yaml
+++ b/playbooks/roles/snapshot/tasks/snapshot.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Create snapshot
+- name: Image
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
   changed_when: _result.rc == 0
