--- a/playbooks/roles/setup_kernel/tasks/kernel-build.yaml
+++ b/playbooks/roles/setup_kernel/tasks/kernel-build.yaml
@@ -39,17 +39,17 @@
     executable: /bin/bash
   register: _kernel_configured
 
-- name: Copy kernel build script
+- name: Copy build script
   ansible.builtin.copy:
     src: build-kernel.sh
     dest: /root/
     mode: "0744"
-  register: _kernel_build_script
+  register: _kernel_make_script
 
-- name: Flush handlers (before kernel build)
+- name: Flush handlers (before kernel make)
   ansible.builtin.meta: flush_handlers
 
-- name: Gather facts - current running kernel
+- name: Gather facts (before kernel make)
   ansible.builtin.setup:
     gather_subset:
       - hardware
@@ -72,30 +72,30 @@
         - apt-daily-upgrade.timer
         - unattended-upgrades
 
-    - name: Build kernel
+    - name: Make
       changed_when: true
       async: "{{ kernel_git_build_wait_retries * kernel_git_build_wait_delay }}"
       poll: 0
       ansible.builtin.shell:
         cmd: >-
           {{ (kernel_git_build_wait | bool) | ternary('/root/build-kernel.sh', 'nohup /root/build-kernel.sh reboot &') }}
-      register: _kernel_build
+      register: _kernel_make
 
-    - name: Kernel build job
+    - name: Job
       block:
-        - name: Poll kernel build job
+        - name: Poll job
           when: kernel_git_build_wait | bool
           retries: "{{ kernel_git_build_wait_retries }}"
           delay: "{{ kernel_git_build_wait_delay }}"
           until: _job_result.finished
           ansible.builtin.async_status:
-            jid: "{{ _kernel_build.ansible_job_id }}"
+            jid: "{{ _kernel_make.ansible_job_id }}"
           register: _job_result
           notify: Reboot system
 
-        - name: Cleanup kernel build job
+        - name: Cleanup job
           ansible.builtin.async_status:
-            jid: "{{ _kernel_build.ansible_job_id }}"
+            jid: "{{ _kernel_make.ansible_job_id }}"
             mode: cleanup
 
     - name: Flush handlers (kernel-build)
