--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -40,10 +40,8 @@
 
 - name: Reboot system
   listen: Reboot system
-  vars:
-    _additional_timeout_tor: "{{ tor_port > 0 | ternary(60, 0) }}"
   ansible.builtin.reboot:
-    reboot_timeout: "{{ 60 + _additional_timeout_tor | int }}"
+    reboot_timeout: 180
     post_reboot_delay: 30
     test_command: "iptables -nvL"
 
