shuffle hosts in play

--- a/playbooks/info.yaml
+++ b/playbooks/info.yaml
@@ -1,16 +1,19 @@
 ---
 - name: Info common
   hosts: all
+  order: shuffle
   roles:
     - role: info_common
     - role: info_healthy
 
 - name: Info snowflake
   hosts: snowflake
+  order: shuffle
   roles:
     - role: info_snowflake
 
 - name: Info tor
   hosts: tor
+  order: shuffle
   roles:
     - role: info_tor
